syntax = "proto3";

package v0449gRpc;
import "google/protobuf/timestamp.proto";

service v0449gRpcSvc {

  //richiesta da client Master a server
  //Lettura e scrittura
  rpc xchRtDataJs (data2PlcJs) returns (data2HmiJs) {}

  //richiesta da client Slave a Server
  //Lettura
  rpc xchRtDataJsSlave (genericRequest) returns (data2HmiJs) {}

  rpc xchRtDataJsBothWays (stream data2PlcJs) returns (stream data2HmiJs) {}

  rpc sendMessage (stream ClientToServerMessage) returns (stream ServerToClientMessage){}
  
  //Richiesta da Client invio Mail.
  rpc reqSendMail (mailRequest) returns (genericResponse){}
  
  //Richiesta scrittura Ricetta a Server
  rpc reqSendRecipe (dataRecipeRequest) returns (genericResponse){}
  
  


  
}


message ClientToServerMessage{
  string text = 1;
}

message ServerToClientMessage{
  string text = 1;
  google.protobuf.Timestamp timestamp = 2;
}

//Richiesta invio mail
message mailRequest{
  string requestMailSend = 1;
}

//Message contenente i dati della configurazione test
message dataRecipeRequest{
  string requestJsConfTest = 1;
  int32 requestHeaderTest = 2;
}

//Richiesta generica
message genericRequest {
  string request = 1;
}

//Risposta Generica di un messaggio
message genericResponse {
  string response = 1;
}


//// The request message con comandi da scrivere
message data2PlcJs {
  string jsSer = 1;
}

//// The response message con letture da leggere
message data2HmiJs {
  string jsSer = 1;
}
